--- a/RegisterApp/app/src/main/res/values/colors.xml
+++ b/RegisterApp/app/src/main/res/values/colors.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="bluePrimary">#2196f3</color>
-    <color name="blueLight">#6ec6ff</color>
-    <color name="blueDark">#0069c0</color>
+    <color name="blue_primary">#2196f3</color>
+    <color name="blue_light">#6ec6ff</color>
+    <color name="blue_dark">#0069c0</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="gray">#616161</color>
 </resources>
