--- a/RegisterApp/app/src/main/res/values/dimens.xml
+++ b/RegisterApp/app/src/main/res/values/dimens.xml
@@ -1,3 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <dimen name="font_large">20sp</dimen>
+    <dimen name="font_normal">16sp</dimen>
+    <dimen name="font_small">12sp</dimen>
+
+    <dimen name="text_input_layout_width_wide">500dp</dimen>
+    <dimen name="text_input_layout_width_normal">300dp</dimen>
+    <dimen name="text_input_layout_width_tight">200dp</dimen>
+
+    <dimen name="text_input_layout_height_tall">150dp</dimen>
+    <dimen name="text_input_layout_height_normal">100dp</dimen>
+    <dimen name="text_input_layout_height_short">50dp</dimen>
+
+    <dimen name="edit_text_height_tall">75dp</dimen>
+    <dimen name="edit_text_height_normal">55dp</dimen>
+    <dimen name="edit_text_height_short">35dp</dimen>
+
+    <dimen name="button_height_tall">70dp</dimen>
+    <dimen name="button_height_normal">50dp</dimen>
+    <dimen name="button_height_short">30dp</dimen>
+
 </resources>
