--- a/RegisterApp/app/src/main/res/values/styles.xml
+++ b/RegisterApp/app/src/main/res/values/styles.xml
@@ -1,3 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <style name="EditTextStyle">
+        <item name="android:textColorHint">@color/gray</item>
+        <item name="android:textSize">@dimen/font_normal</item>
+        <item name="android:ems">10</item>
+    </style>
+    <style name="ButtonStyle">
+        <item name="android:backgroundTint">@color/blue_primary</item>
+        <item name="android:textSize">@dimen/font_normal</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:paddingStart">16dp</item>
+        <item name="android:paddingEnd">16dp</item>
+    </style>
+    <style name="TextButtonStyle" parent="@style/Widget.MaterialComponents.Button.TextButton">
+        <item name="android:backgroundTint">@color/white</item>
+        <item name="android:textSize">@dimen/font_small</item>
+        <item name="android:textColor">@color/blue_primary</item>
+        <item name="android:paddingStart">16dp</item>
+        <item name="android:paddingEnd">16dp</item>
+    </style>
+
 </resources>
