--- a/GeoApp/app/src/main/res/layout/fragment_settings.xml
+++ b/GeoApp/app/src/main/res/layout/fragment_settings.xml
@@ -7,7 +7,14 @@
     android:layout_height="match_parent"
     android:backgroundTint="@color/black"
     tools:context=".MainActivity"
-    >    <com.google.android.material.bottomnavigation.BottomNavigationView
+    >
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/setting"
+        android:name="com.hfad.geoapp.MyPreferenceFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        />
+    <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
         style="@style/Widget.MaterialComponents.BottomNavigationView.Colored"
         android:layout_width="match_parent"
