--- a/Buddha/app/src/main/res/layout/activity_main.xml
+++ b/Buddha/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
         />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/add_point_button"
+        android:id="@+id/add_quote_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="30dp"
